首页&小雪读条

--- a/css/app/module/icon.less
+++ b/css/app/module/icon.less
@@ -50,3 +50,19 @@
 	background:url('@{url}icon/app_add.gif') no-repeat 0 0;
 	.size(12px);.dbi;.y;
 }
+
+.u-icon-servers{
+	background-image:url('@{url}app/sidebar/app.png');
+}
+.u-icon-exam{
+	background-image:url('@{url}app/sidebar/keju.png');
+}
+.u-icon-peizhuang{
+	background-image:url('@{url}app/sidebar/pz.png');
+}
+.u-icon-jiasu{
+	background-image:url('@{url}app/sidebar/js.png');
+}
+.u-icon-chengjiu{
+	background-image:url('@{url}app/sidebar/cj.png');
+}
