--- a/css/index/index.less
+++ b/css/index/index.less
@@ -2,10 +2,19 @@
 @import url('../global/var.less');			//常量
 @import url('../global/color.less');		//配色
 
+
+@import url('index/layout.less');
+@import url('index/sidebar.less');
+@import url('index/content.less');
+@import url('index/mobile.less');
+
 @import url('../plugin/swiper2.less');		//swiper
-@import url('index/index.less');				//首页
-@import url('index/index-slider.less');			//幻灯
+@import url('index/slider.less');
+
+
+
+/*@import url('index/index-slider.less');			//幻灯
 @import url('index/index-news.less');			//新闻
 @import url('index/index-zt.less');				//专题
 @import url('index/index-app.less');			//应用
-@import url('index/index-channel.less');		//频道
+@import url('index/index-channel.less');		//频道*/
