--- a/css/module/forum/forumdisplay/c-flist-item.less
+++ b/css/module/forum/forumdisplay/c-flist-item.less
@@ -41,7 +41,10 @@
 	}
 
 	//标题
-	.u-title{.fl;}
+	.u-title{
+		.fl;
+		max-width:500px;
+	}
 	.u-sort{.color(#999,@blue-link,#c00);}
 	.u-subject{}
 
