--- a/css/module/ui/ui.less
+++ b/css/module/ui/ui.less
@@ -12,6 +12,7 @@
 @import url('other.less');			//其他
 @import url('verif.less');			//认证
 @import url('role.less');			//门派
+@import url('msg.less');			//跳转消息
 
 
 .alertHTML .p_pop{
