--- a/css/pve/tool/sidebar.less
+++ b/css/pve/tool/sidebar.less
@@ -39,6 +39,9 @@
 		.u-tool i{
 			background:url('@{url}tool/tool.png') no-repeat 0 0;
 		}
+		.u-app i{
+			background:url('@{url}tool/app.png') no-repeat 0 0;
+		}
 		.u-snow i{
 			background:url('@{url}tool/snow.png') no-repeat 0 0;
 		}
