--- a/css/pvx/jh/biz-list.less
+++ b/css/pvx/jh/biz-list.less
@@ -72,6 +72,9 @@
 	.u-type-2{background:url('@{url}biz/u-type-2.png') no-repeat 0 0;}
 	.u-type-3{background:url('@{url}biz/u-type-3.png') no-repeat 0 0;}
 	.u-type-4{background:url('@{url}biz/u-type-4.png') no-repeat 0 0;}
+	.e-failtime{
+		.none;
+	}
 
 }
 
