--- a/css/pvx/pvx-mix.less
+++ b/css/pvx/pvx-mix.less
@@ -25,6 +25,9 @@
 	.u-icon-faqtips{
 		margin-right:4px;
 		margin-top:-2px;
+		.size(13px);
+		.dbi;.y;
+		background:url('@{url}icon/faq.gif') no-repeat 0 0;
 	}
 }
 
