--- a/css/system/system.less
+++ b/css/system/system.less
@@ -36,14 +36,8 @@
 }
 .system-content,.f-392 .default-content{
 	//margin-left:@sd2;
-	.fr;.w(@wp - @sd2 - 20px);
+	.fr;.w(@wpm - @sd2 - 20px);
 	padding:0;
-}
-
-.ua-responsive .screen-m .system-content,
-.ua-responsive .screen-m.f-392 .default-content{
-	margin-left:0;
-	.w(@wpm - @sd2 - 20px);
 }
 
 .ua-responsive .screen-s .system-sidebar{.none;}
