--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -16,38 +16,38 @@
 		<div class="m-sitemap-block m-sitemap-channel">
 			<h2>网站栏目</h2>
 			<ul>
-				<li><a href="./">首页<i class="u-index"></i></a></li>
-				<li><a href="./macro">宏库<i class="u-macro"></i></a></li>
-				<li><a href="./tool">工具<i class="u-tool"></i></a></li>
-				<li><a href="./app">应用<i class="u-app"></i></a></li>
-				<!-- <li><a href="./skin">皮肤<i class="u-skin"></i></a></li> -->
-				<li><a href="./role">职业<i class="u-role"></i></a></li>
-				<li><a href="./fam">副本<i class="u-fam"></i></a></li>
-				<li><a href="./face">捏脸<i class="u-face"></i></a></li>
-				<!-- <li><a href="./wall">壁纸<i class="u-wall"></i></a></li> -->
-				<li><a href="./raid">团队<i class="u-raid"></i></a></li>
-				<li><a href="./biz">交易<i class="u-biz"></i></a></li>
-				<li><a href="./story">回忆录<i class="u-story"></i></a></li>
-				<li><a href="./bbs">讨论区<i class="u-bbs"></i></a></li>
-				<li><a href="./wiki">维基百科<em>(Building)</em><i class="u-wiki"></i></a></li>
+				<li><a href="./"><i class="u-index"></i><span>首页</span></a></li>
+				<li><a href="./macro"><i class="u-macro"></i><span>宏库</span></a></li>
+				<li><a href="./tool"><i class="u-tool"></i><span>工具</span></a></li>
+				<li><a href="./app"><i class="u-app"></i><span>应用</span></a></li>
+				<li><a href="./skin"><i class="u-skin"></i><span>皮肤</span></a></li>
+				<li><a href="./role"><i class="u-role"></i><span>职业</span></a></li>
+				<li><a href="./fam"><i class="u-fam"></i><span>副本</span></a></li>
+				<li><a href="./face"><i class="u-face"></i><span>捏脸</span></a></li>
+				<!-- <li><a href="./wall"><i class="u-wall"></i><span>壁纸</span></a></li> -->
+				<li><a href="./raid"><i class="u-raid"></i><span>团队</span></a></li>
+				<li><a href="./biz"><i class="u-biz"></i><span>交易</span></a></li>
+				<li><a href="./story"><i class="u-story"></i><span>回忆录</span></a></li>
+				<li><a href="./bbs"><i class="u-bbs"></i><span>讨论区</span></a></li>
+				<li><a href="./wiki"><i class="u-wiki"></i><span>百科</span></a></li>
 			</ul>
 		</div>
 
 		<div class="m-sitemap-block m-sitemap-zt">
 			<h2>专题专辑</h2>
 			<ul>
-				<li><a href="./fb">副本专题<span>(PC版)</span></a></li>
+				<li><a href="./fb">副本专题<em>(PC版)</em></a></li>
 			</ul>
 		</div>
 
 		<div class="m-sitemap-block m-sitemap-old">
 			<h2>停更栏目</h2>
 			<ul>
-				<li><a href="./pet">宠物<span>(PC版)</span></a></li>
-				<li><a href="./video">视频<span>(PC版)</span></a></li>
-				<li><a href="./cloud">超级宏官网<span>(已和谐)</span></a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<span>(已和谐)</span></a></li>
-				<li><a href="./group.php">群组<span>(私版)</span></a></li>
+				<li><a href="./pet">宠物<em>(PC版)</em></a></li>
+				<li><a href="./video">视频<em>(PC版)</em></a></li>
+				<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
+				<li><a href="./group.php">群组<em>(私版)</em></a></li>
 			</ul>
 		</div>
 
@@ -93,8 +93,8 @@
 			<ul>
 				<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
 				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
-				<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<span>(PC版)</span></a></li>
-				<li><a href="./archiver"  target="_blank">Archiver<span>(PC版)</span></a></li>
+				<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<em>(PC版)</em></a></li>
+				<li><a href="./archiver"  target="_blank">Archiver<em>(PC版)</em></a></li>
 			</ul>
 		</div>
 
