--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -2,115 +2,52 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/index/index.css" type="text/css" />
 <div class="index-container">
     <div class="wp">
-    
         <div class="index-content">
-        
-            <div class="index-primary">
-
-                <!--1.slider-->
-                <div class="m-index-slider m-index-block">
-                    <!--{block/1733}-->
-                </div>
-
-                <!--2.news-->
-                <div class="m-index-news m-index-block">
-                    <div class="m-index-til">
-                        <h2 class="til">新鲜干货<i></i></h2>
-                        <div class="link">
-                            <ul><!--{block/1734}--></ul>
-                        </div>
-                    </div>
-                    <div class="m-index-newslist">
-                        <!--{block/518}-->
-                    </div>
-                </div>
-
-                <!--3.zt-->
-                <div class="m-index-zt  m-index-block">
-                    <div class="m-index-zt-wrapper">
-                        <!--{block/1720}-->
-                    </div>
-                </div>
-
+            <div class="m-slider">
+                <!--{block/1733}-->
+            </div>
+            <h3 class="m-title">
+                <span>干货推荐</span>
+                <a class="u-more" href="./news">More</a>
+                <a class="u-add" href="./push"><i></i>推送</a>
+            </h3>
+            <div class="m-news">
+                <!--{block/518}-->
+            </div>
+            <h3 class="m-title">
+                <span>最新动态</span>
+            </h3>
+            <div class="m-news">
+                <!--{block/1805}-->
+            </div>
+        </div>
+        <div class="index-sidebar">
+            <div class="m-code m-subblock">
+                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_129.jpg" alt="剑网3PVE微信公众号"></span>
+                <span>扫一扫关注微信公众号</span>
+                <b>剑网3PVE</b>
+            </div>
+            
+            <h3 class="m-title">
+                <span>站内更新与公告</span>
+                <a class="u-more" href="forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">More</a>
+            </h3>
+            <div class="m-list m-subblock">
+                <!--{block/1808}-->
             </div>
 
-            <div class="index-sidebar">
-                
-                <!--4.app-->
-                <div class="m-index-app m-index-block">
-                    <div class="app"><!--{block/1719}--></div>
-                </div>
-
-                <!--5.channel-->
-                <div class="m-index-channel m-index-block">
-                    <div class="m-macro m-channel">
-                        <i class="ico">PVE</i>
-                        <h2 class="til"><a href="./macro" target="_blank">宏库</a></h2>
-                        <a href="./macro" target="_blank" class="des">全心法最新原创宏基地</a>
-                        <div class="link"><!--{block/1722}--></div>
-                    </div>
-                    <div class="m-tool m-channel">
-                        <i class="ico">PVN</i>
-                        <h2 class="til"><a href="./tool" target="_blank">工具</a></h2>
-                        <a href="./tool" target="_blank" class="des">最好用的游戏扩展工具</a>
-                        <div class="link"><!--{block/1723}--></div>
-                    </div>
-                    <div class="m-role m-channel">
-                        <i class="ico">PVE</i>
-                        <h2 class="til"><a href="./role" target="_blank">职业</a></h2>
-                        <a href="./role" target="_blank" class="des">高玩必备·全职业白皮书</a>
-                        <div class="link"><!--{block/1724}--></div>
-                    </div>
-                    <div class="m-fam m-channel">
-                        <i class="ico">PVE</i>
-                        <h2 class="til"><a href="./fam" target="_blank">副本</a></h2>
-                        <a href="./fam" target="_blank" class="des">首甲团出品开荒全指南</a>
-                        <div class="link"><!--{block/1725}--></div>
-                    </div>
-                    <div class="m-raid m-channel">
-                        <i class="ico">PVE</i>
-                        <h2 class="til"><a href="./raid" target="_blank">团队</a></h2>
-                        <a href="./raid" target="_blank" class="des">团队招募信息平台</a>
-                        <div class="link"><!--{block/1726}--></div>
-                    </div>
-                    <div class="m-biz m-channel">
-                        <i class="ico">PVN</i>
-                        <h2 class="til"><a href="./biz" target="_blank">交易</a></h2>
-                        <a href="./biz" target="_blank" class="des">免费的交易信息平台</a>
-                        <div class="link"><!--{block/1729}--></div>
-                    </div>
-                    <div class="m-pet m-channel">
-                        <i class="ico">PVX</i>
-                        <h2 class="til"><a href="./forum.php" target="_blank">休闲</a></h2>
-                        <a href="./bbs" target="_blank" class="des">休闲攻略指南</a>
-                        <div class="link"><!--{block/1736}--></div>
-                    </div>
-                    <!--<div class="m-face m-channel">
-                        <i class="ico">PVX</i>
-                        <h2 class="til"><a href="./face" target="_blank" style="color:#f39;font-weight:bold;">捏脸</a></h2>
-                        <a href="./face" target="_blank" class="des">原创精品脸型分享</a>
-                        <div class="link">{block/1727}</div>
-                    </div>
-                    -->
-                    <!--<div class="m-bbs m-channel">
-                        <i class="ico">PVN</i>
-                        <h2 class="til"><a href="./ask" target="_blank">论坛</a></h2>
-                        <a href="./ask" target="_blank" class="des">论坛交流讨论</a>
-                        <div class="link">{block/1737}</div>
-                    </div>-->
-                    <!--<div class="m-pet m-channel">
-                        <i class="ico">PVN</i>
-                        <h2 class="til"><a href="./faq" target="_blank">帮助</a></h2>
-                        <a href="./faq" target="_blank" class="des">网站反馈系统</a>
-                        <div class="link">{block/1738}</div>
-                    -->
-                    </div>
-                </div>
-
+            <h3 class="m-title">
+                <span>每日古风一曲</span>
+                <a class="u-history" href="http://music.163.com/#/playlist?id=376487170" target="_blank">History</a>
+            </h3>
+            <div class="m-music m-subblock">
+                <!--{block/1803}-->
             </div>
+
         </div>
     </div>
 </div>
+
 <script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
 <script src="http://js.jx3pve.com/js/page/page-index.js"></script>
 <!--{template common/footer}-->
