--- a/css/module/forum/layout.less
+++ b/css/module/forum/layout.less
@@ -26,10 +26,7 @@
 	//border:1px solid #ddd;
     //box-shadow: 0 0 4px rgba(0,0,0,0.1);
 	.r(4px);
-	.w(@ct);
-}
-.ua-responsive .screen-m{
-	.default-content{.w(@ctm);}
+	.w(@ctm);
 }
 
 .postpage-container{
