--- a/css/module/forum/viewthread/c-fli-primary.less
+++ b/css/module/forum/viewthread/c-fli-primary.less
@@ -155,6 +155,9 @@
 			margin-bottom:5px;
 		}
 	}
+	ignore_js_op{
+		span{white-space:normal !important;}
+	}
 }
 .ua-responsive .screen-s{
 	.locked{
