--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -4,8 +4,8 @@
 			<li><a href="http://www.jx3pve.com">首页<span>Index</span></a></li>
 			<li class="{if $_G[fid]=='294'}on{/if}"><a href="./macro">宏库<span>Macro</span></a></li>
 			<li class="{if $_G[fid]=='321'}on{/if}"><a href="./tool">工具<span>Tool</span></a></li>
-			<li id="c-header-nav-app"><a href="./app">应用<span>APP</span></a></li>
-			<!-- <li class="{if $_G[fid]=='79'}on{/if}"><a href="./skin">皮肤<span>Tool</span></a></li> -->
+			<li id="c-header-nav-app"><a class="new" href="./app">应用<span>APP</span></a></li>
+			<li class="{if $_G[fid]=='79'}on{/if}"><a class="new" href="./snow">读条<span>Skin</span></a></li>
 			<li class="{if $_G[fid]=='384'}on{/if}"><a href="./role">职业<span>Role</span></a></li>
 			<li class="{if $_G[fid]=='369'}on{/if}"><a href="./fam">副本<span>Fam</span></a></li>
 			<li class="{if $_G[fid]=='92'}on{/if}"><a href="./face">捏脸<span>Face</span></a></li>
@@ -13,7 +13,7 @@
 			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a class="new" href="./raid">江湖<span>Info</span></a></li>
 			<li class="{if $_G[fid]=='390'}on{/if}"><a href="./book">回忆录<span>Story</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">讨论区<span>Forum</span></a></li>
-		</ul>
+		</ul> 
 		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">全部<span>All</span></a>
 	</div>
 </div>
