--- a/template/default/forum/post_tips.htm
+++ b/template/default/forum/post_tips.htm
@@ -1,3 +1,6 @@
 <div class="c-post-tips">
-	发帖时使用“@用户名”可以通知到对应玩家。
+	<p id="c-post-tips-tg">+ 点击查看发布帮助</p>
+	<div id="c-post-tips-content">
+		发帖时使用“@用户名”可以通知到对应玩家。
+	</div>
 </div>
