Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -42,7 +42,9 @@
             </h3>
             <div class="m-music m-subblock">
                 <!--{block/1803}-->
+                <p class="m-music-tips"><!--{block/1810}--></p>
             </div>
+
 
         </div>
     </div>
