--- a/css/pvx/jh/biz-view.less
+++ b/css/pvx/jh/biz-view.less
@@ -8,7 +8,9 @@
     padding:30px;
     .size(220px, 140px);
     img {
-        .full;
+        .db;.auto(x);
+        max-width:100%;
+        max-height:100%;
     }
 }
 .m-biz-contact{
