--- a/css/user/credit/common.less
+++ b/css/user/credit/common.less
@@ -30,9 +30,10 @@
 				}
 			}
 			.tab-btn{
-				.color(@blue-link,#c00);margin-right:10px;
+				.color(@blue-link,#c00);
+				padding:5px 10px;
 				&.on{
-					padding:5px 10px;background-color:#f2f2f2;
+					background-color:#f2f2f2;
 				}
 			}
 		}
