--- a/template/yylmacro/home/首页/os_content.htm
+++ b/template/yylmacro/home/首页/os_content.htm
@@ -11,6 +11,7 @@
 			<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=credit&op=buy">充值</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=usergroup&do=list">开通会员</a></li>
+			<li><a href="./gift">积分兑换</a></li>
 			<li><a href="./home.php?mod=spacecp&ac=invite">邀请码</a></li>
 		</ul>
 	</div>
