--- a/template/yylmacro/home/首页/os_header.htm
+++ b/template/yylmacro/home/首页/os_header.htm
@@ -84,6 +84,7 @@
 			<li class="cre">
 				<label>水晶</label> 
 				<span><!--{echo getuserprofile('extcredits8');}--></span> 
+				<a href="./gift">[兑换]</a>
 			</li>
 		</ul>
 		<p class="u-credit-extend">
