--- a/template/yylmacro/portal/portal_topic_test.htm
+++ b/template/yylmacro/portal/portal_topic_test.htm
@@ -1,58 +1,80 @@
 <!--{template common/header_m}-->
-<link rel="stylesheet" href="http://css.jx3pve.com/css/index/index.css" type="text/css" />
-
-<div class="index-container">
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/credit/gift.css" type="text/css" />
+<header class="i-header">
+    <a class="i-header-back" href="./home.php"><i></i></a>
+    <div class="i-header-title">积分兑换</div>
+</header>
+<div class="user-container">
     <div class="wp">
-        <div class="index-content">
-            <div class="m-slider">
-                <!--{block/1733}-->
-            </div>
-            <h3 class="m-title">
-                <span>干货推荐</span>
-                <a class="u-more" href="./news">More</a>
-                <a class="u-add" href="./news"><i></i>推送</a>
-            </h3>
-            <div class="m-news">
-                <!--{block/518}-->
-            </div>
-            <h3 class="m-title">
-                <span>最新动态</span>
-            </h3>
-            <div class="m-news">
-                <!--{block/1805}-->
+        <div id="pt" class="bm cl">
+            <div class="z">
+                <a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+                <a href="home.php">{lang useros}</a><em>&rsaquo;</em>
+                <a href="./gift">积分兑换</a>
             </div>
         </div>
-        <div class="index-sidebar">
-            <div class="m-code m-subblock">
-                <span class="u-img"><img src="http://img.jx3pve.com/img/header/wx_129.jpg" alt="剑网3PVE微信公众号"></span>
-                <span>扫一扫关注微信公众号</span>
-                <b>剑网3PVE</b>
-            </div>
-            
-            <h3 class="m-title">
-                <span>站内更新与公告</span>
-                <a class="u-more" href="forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">More</a>
-            </h3>
-            <div class="m-list m-subblock">
-                <!--{block/1804}-->
-            </div>
 
-            <h3 class="m-title">
-                <span>每日古风一曲</span>
-                <a class="u-history" href="http://music.163.com/#/user/home?id=274422618" target="_blank">History</a>
-            </h3>
-            <div class="m-music m-subblock">
-                <!--{block/1803}-->
-            </div>
+        <div class="user-main">
+            <!--{subtemplate home/sidebar}-->
+            <div class="user-content">
+                <input type="hidden" id="u-credit-rq" value="{echo getuserprofile('extcredits5');}">
+                <input type="hidden" id="u-credit-sj" value="{echo getuserprofile('extcredits8');}">
 
+                <!--{subtemplate home/gift_header}-->
+                <div class="m-block">
+                    <h2 class="m-title">积分兑换<span>Exchange gift&raquo;</span></h2>
+                    <ul class="m-gift-block m-gift-list" id="m-gift-list">
+                        <li class="m-gift-item">
+                            <a class="u-screenshot" href="#"><img src="" alt=""></a>
+                            <span class="u-meta u-name">礼品名称</span>
+                            <span class="u-meta u-price">
+                                <em>水晶:<b class="u-credit-rq">120</b></em>
+                                <em>人气:<b class="u-credit-sj">20</b></em>
+                            </span>
+                            <span class="u-meta u-num">库存:<b class="u-gift-num">0</b></span>
+                            <a class="u-go u-btn-blue" href="javascript:;">兑换</a>
+                        </li>
+                    </ul>
+                    <div class="m-gift-block m-gift-record" id="m-gift-record">
+                        <table>
+                            <thead>
+                                <th>礼品名称</th>
+                                <th>兑换时间</th>
+                                <th>兑换状态</th>
+                                <th>消耗积分</th>
+                            </thead>
+                            <tbody>
+                                <td>键盘</td>
+                                <td>2016/5/16</td>
+                                <td class="istrue">成功</td>
+                                <td>20水晶,20人气</td>
+                            </tbody>
+                            <tbody>
+                                <td>键盘</td>
+                                <td>2016/5/16</td>
+                                <td class="ispending">待审核</td>
+                                <td>20水晶,20人气</td>
+                            </tbody>
+                            <tbody>
+                                <td>键盘</td>
+                                <td>2016/5/16</td>
+                                <td class="isfalse">驳回</td>
+                                <td>20水晶,20人气</td>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="m-gift-block m-gift-rule" id="m-gift-rule">
+                         <!--{block/1782}-->
+                    </div>
+                </div>
+                <div class="gift-footer">
+                   
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-<script src="http://js.jx3pve.com/js/plugin/swiper2.min.js"></script>
-<script src="http://js.jx3pve.com/js/page/page-index.js"></script>
+<script src="http://js.jx3pve.com/js/user/gift.min.js"></script>
+<script src="http://js.jx3pve.com/js/user/user.min.js"></script>
 <!--{template common/footer}-->
