--- a/template/mix/forum/sidebar.htm
+++ b/template/mix/forum/sidebar.htm
@@ -1,9 +1,21 @@
-<a class="m-mix-searchtips" href="./faq">
-	<i class="u-icon-faqtips"></i>站内问题请先查看帮助中心
-</a>
+<!-- jx3pve:分类导航 -->
+<h2 class="default-sidebar-title">分类导航<a class="u-more" href="./bbs" title="全部">全部</a></h2>
+<ul class="default-sidebar-content m-bbs-nav">
+	<li {if ($_GET['typeid']==2)} class="on"{/if}><a class="u-ask" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=2&orderby=lastedit"><i></i>求助<em>Ask</em></a></li>
+	<li {if ($_GET['typeid']==326)} class="on"{/if}><a class="u-discuz" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=326&orderby=lastedit"><i></i>讨论<em>Discuz</em></a></li>
+	<li {if ($_GET['typeid']==327)} class="on"{/if}><a class="u-share" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=327&orderby=lastedit"><i></i>分享<em>Share</em></a></li>
+	<li {if ($_GET['typeid']==333)} class="on"{/if}><a class="u-ac" href="./forum.php?mod=forumdisplay&fid=2&filter=typeid&typeid=333&orderby=lastedit"><i></i>公告<em>AC</em></a></li>
+</ul>
 
-<div class="m-mix-say">
-	<!--{block/1790}-->
+
+<h2 class="default-sidebar-title">温馨提示</h2>
+<div class="default-sidebar-content">
+	<a class="m-mix-searchtips" href="./faq">
+		<i class="u-icon-faqtips"></i>站内问题请先查看帮助中心
+	</a>
+	<div class="m-mix-say">
+		<!--{block/1790}-->
+	</div>
 </div>
 
 <h2 class="default-sidebar-title">发帖说明</h2>
