--- a/template/yylmacro/home/侧边栏/spacecp_footer.htm
+++ b/template/yylmacro/home/侧边栏/spacecp_footer.htm
@@ -26,8 +26,8 @@
 	<ul class="user-sidebar-list">
 		<li {if ($_GET['ac']=="credit" && $_GET['op']!="base" && $_GET['op']!="buy")} class="on"{/if}><a href="home.php?mod=spacecp&ac=credit&op=log">我的积分</a></li>
 		<li {if ($_GET['ac']=="credit" && $_GET['op']=="base") || ($_GET['ac']=="credit" && $_GET['op']=="buy")} class="on"{/if}><a class="buy" href="home.php?mod=spacecp&ac=credit&op=buy">充 值</a></li>
-		<!-- <li {if $_GET['topicid'] == '118'} class="on"{/if}><a class="gift" href="javascript:;" title="即将开放">礼品兑换</a></li> -->
 		<li {if ($_GET['ac']=="usergroup")} class="on"{/if}><a class="vip" href="home.php?mod=spacecp&ac=usergroup&do=list">VIP会员</a></li>
+		<li {if $_GET['topicid'] == '118'} class="on"{/if}><a class="gift" href="./gift">积分兑换</a></li>
 		<li {if ($_GET['ac']=="invite")} class="on"{/if}><a href="home.php?mod=spacecp&ac=invite">邀请码</a></li>
 	</ul>
 
