Signed-off-by: unknown <17229398@qq.com>

--- a/css/index/index/content.less
+++ b/css/index/index/content.less
@@ -30,7 +30,15 @@
 		i{background-color:@basecolor;color:#fff;}
 	}
 }
+
+.m-lol{
+	margin-top:10px;
+	.none;
+}
 .ua-responsive .screen-s .m-news{
 	padding:10px;
 	em{.none;}
+}
+.adminHTML .m-lol{
+	.db;
 }
