--- a/css/index/index/layout.less
+++ b/css/index/index/layout.less
@@ -55,6 +55,11 @@
 			.dbi;.size(12px);.y(-2px);margin-right:3px;
 		}
 	}
+	.u-tips{
+		.fr;
+		.normal;
+		color:#888;
+	}
 }
 .m-subblock{
 	margin-bottom:10px;
