Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/module/forum/forum.less
+++ b/css/module/forum/forum.less
@@ -43,3 +43,16 @@
 @import url('forumdisplay/c-flist-item.less');
 @import url('forumdisplay/u_addef.less');
 @import url('forumdisplay/u_addex.less');
+
+
+.pg_modcp{
+	#pt,#ct{
+		.w(1180px);
+	}
+	#pt{
+		margin-bottom:10px;
+	}
+	.jx3pve-container{
+		padding-bottom:10px;
+	}
+}
