--- a/template/yylmacro/member/login.htm
+++ b/template/yylmacro/member/login.htm
@@ -132,7 +132,7 @@
 
 					<!--{hook/logging_input}-->
 
-					<div class="none rfm {if !empty($_GET['infloat'])} bw0{/if}">
+					<div class="rfm {if !empty($_GET['infloat'])} bw0{/if}">
 						<table>
 							<tr>
 								<th></th>
