Signed-off-by: unknown <17229398@qq.com>

--- a/template/yylmacro/home/积分/积分/buy_pc_transfer.htm
+++ b/template/yylmacro/home/积分/积分/buy_pc_transfer.htm
@@ -16,7 +16,7 @@
 						{lang credits_give}&nbsp;
 						<input type="text" name="to" id="to" class="px" size="15" style="width: auto;" />
 					</td>
-					<td width="300" class="d">
+					<td class="d">
 						{lang memcp_credits_transfer_min_balance} $_G[setting][transfermincredits] {$_G[setting][extcredits][$_G[setting][creditstransextra][9]][unit]}<br />
 						<!--{if intval($taxpercent) > 0}-->{lang credits_tax} $taxpercent<!--{/if}-->
 					</td>
