Signed-off-by: unknown <17229398@qq.com>

--- a/css/app/servers/content.less
+++ b/css/app/servers/content.less
@@ -11,7 +11,7 @@
 	border-bottom:1px solid #eee;
 
 	span{.db;.fl;.x;min-width:60px;}
-	.daqu,.fwq,.status{.w(80px);}
+	.daqu,.fwq,.status{.w(80px);.nobreak;}
 	.recent,.history{.w(200px);/*padding:0 10px;*/}
 
 	.status.status-1{color:#08DC08;}
