--- a/css/pve/macro/view.less
+++ b/css/pve/macro/view.less
@@ -8,6 +8,8 @@
 	margin-bottom:0;
 }
 .m-macro-baseinfo{
+	.pr;
+	padding-right:290px;
 	line-height: 2.5;
 	li{
 		border-bottom:1px dashed #ddd;
@@ -50,6 +52,27 @@
 	}
 	.u-macro-zan i{
 		background-color:#f39;
+	}
+}
+.m-banner-macro{
+	.pa;.rb(0,0);
+	.size(280px,130px);
+	border:1px solid #ddd;
+	a,img{.db;}
+	span{.none;}
+}
+.ua-responsive .screen-s{
+	.m-macro-baseinfo{padding-right:0;}
+	.m-banner-macro{
+		.ps;
+		margin-top:10px;
+		background-color:#f9f9f9;
+		padding:5px 10px;
+		.fz(13px,20px);.x;
+		.size(auto);
+		span{.db;}
+		img{.none;}
+		b{.dbi;background-color:#f39;color:#fff;padding:0 5px;border-radius:3px;margin-right:2px;}
 	}
 }
 .m-macro-relative{
